Closed Bug 1116046 Opened 10 years ago Closed 10 years ago

[v2.0m] emulator build bustage in dom/system/gonk/AudioManager.cpp

Categories

(Firefox OS Graveyard :: GonkIntegration, defect)

ARM
Gonk (Firefox OS)
defect
Not set
major

Tracking

(blocking-b2g:2.0M+, b2g-v1.4 unaffected, b2g-v2.0 unaffected, b2g-v2.0M fixed, b2g-v2.1 unaffected, b2g-v2.2 unaffected)

RESOLVED FIXED
blocking-b2g 2.0M+
Tracking Status
b2g-v1.4 --- unaffected
b2g-v2.0 --- unaffected
b2g-v2.0M --- fixed
b2g-v2.1 --- unaffected
b2g-v2.2 --- unaffected

People

(Reporter: seinlin, Unassigned)

References

Details

Attachments

(1 file)

      No description provided.
v2.0m brand needs emulator-ics and emulator-jb to run unit test. This bug will fix build bustage of emulator(emulator-ics).
blocking-b2g: --- → 2.0M?
Blocks: Woodduck
blocking-b2g: 2.0M? → 2.0M+
In dom/system/gonk/android_audio/AudioSystem.h, AUDIO_DEVICE_OUT_FM and AUDIO_DEVICE_IN_FM are defined based on ANDROID_VERSION. So I think dom/system/gonk/AudioManager.cpp also needs to handle this accordingly.

Randy, Could you review this patch? Thanks!
Attachment #8541998 - Flags: review?(rlin)
Comment on attachment 8541998 [details] [diff] [review]
bug-1116046.patch

Review of attachment 8541998 [details] [diff] [review]:
-----------------------------------------------------------------

LGTM.
Attachment #8541998 - Flags: review?(rlin) → review+
http://hg.mozilla.org/releases/mozilla-b2g32_v2_0m/rev/f8c5a320a0af
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: