Bug 1116046 - Add AUDIO_DEVICE_OUT_FM to solve emulator build bustage. r=rlin, a=2.0m+