dom/system/gonk/AudioManager.cpp
@@ -653,7 +653,11 @@ AudioManager::GetForceForUse(int32_t aUsage, int32_t* aForce) {
 NS_IMETHODIMP
 AudioManager::GetFmRadioAudioEnabled(bool *aFmRadioAudioEnabled)
 {
+#if ANDROID_VERSION < 17
+  *aFmRadioAudioEnabled = IsDeviceOn(AUDIO_DEVICE_OUT_FM);
+#else
   *aFmRadioAudioEnabled = IsDeviceOn(AUDIO_DEVICE_IN_FM);
+#endif
   return NS_OK;
 }
 
@@ -663,9 +667,15 @@ AudioManager::SetFmRadioAudioEnabled(bool aFmRadioAudioEnabled)
   if (static_cast<
       status_t (*) (AudioSystem::audio_devices, AudioSystem::device_connection_state, const char *)
       >(AudioSystem::setDeviceConnectionState)) {
+#if ANDROID_VERSION < 17
+    AudioSystem::setDeviceConnectionState(AUDIO_DEVICE_OUT_FM,
+      aFmRadioAudioEnabled ? AUDIO_POLICY_DEVICE_STATE_AVAILABLE :
+      AUDIO_POLICY_DEVICE_STATE_UNAVAILABLE, "");
+#else
     AudioSystem::setDeviceConnectionState(AUDIO_DEVICE_IN_FM,
       aFmRadioAudioEnabled ? AUDIO_POLICY_DEVICE_STATE_AVAILABLE :
       AUDIO_POLICY_DEVICE_STATE_UNAVAILABLE, "");
+#endif
     InternalSetAudioRoutes(GetCurrentSwitchState(SWITCH_HEADPHONES));
 
     if (aFmRadioAudioEnabled) {
